fix blurry neufund logo

--- a/page/sass/faq.scss
+++ b/page/sass/faq.scss
@@ -32,10 +32,10 @@
     }
 
     h4 {
+      display: inline;
       line-height: 29px;
       font-size: $font-size-normal;
       font-weight: $font-weight-normal;
-      display: inline;
 
       &:hover {
         cursor: pointer;
@@ -44,10 +44,10 @@
 
 
     i {
+      display: inline;
       vertical-align: middle;
       line-height: 29px;
       color: $blue;
-      display: inline;
     }
 
     a {
@@ -57,10 +57,6 @@
 
       &:focus {
         text-decoration: none;
-      }
-
-      &:focushover {
-        text-decoration: underline !important;
       }
     }
 
